--- a/second.html
+++ b/second.html
@@ -12,9 +12,9 @@
         <div class="child"> 
             <img class="image" src="https://i.pinimg.com/originals/61/b3/aa/61b3aa0c8fac8e508dcada72f7f41840.jpg"/>
             <h1 class="title">HAPPY BIRTHDAY NEERAJ</h1>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
             <button class="button">submit</button>
         </div>
     </div>
@@ -22,9 +22,9 @@
         <div class="child">
             <img class="image" src="https://i.pinimg.com/originals/61/b3/aa/61b3aa0c8fac8e508dcada72f7f41840.jpg"/>
             <h1 class="title">HAPPY BIRTHDAY NEERAJ</h1>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
             <button class="button">submit</button>
         </div>
     </div>
@@ -32,9 +32,9 @@
         <div class="child">
             <img class="image" src="https://i.pinimg.com/originals/61/b3/aa/61b3aa0c8fac8e508dcada72f7f41840.jpg"/>
             <h1 class="title">HAPPY BIRTHDAY NEERAJ</h1>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
-            <p class="desc">Happy birthdar Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
+            <p class="desc">Happy birthday Neeraj i wish this birthday brings love and happiness in your life.</p>
             <button>submit</button>
         </div>
     </div>
