added flex box project

--- a/third.html
+++ b/third.html
@@ -17,7 +17,7 @@
         <div class="child1">
             <img src="https://d29zunrt9sid73.cloudfront.net/speaker_media/asset/28695/portrait_70_28695.png" class="pokemon" alt="pokemon_img"/>
             <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+            <div class="child1">
                 <button class="type">
                     Electric
                 </button>
@@ -36,56 +36,79 @@
         </div>
     </div>
     <div class="parent">
-        <div class="child">
-            <img src="https://d29zunrt9sid73.cloudfront.net/speaker_media/asset/28695/portrait_70_28695.png" class="pokemon" alt="pokemon_img"/>
-            <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+        <div class="child3">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger.</p>
+            <div class="child3">
                 <button class="type">
-                    Electric
+                    Grass
                 </button>
             </div>
         </div>
     </div>
     <div class="parent">
-        <div class="child">
-            <img src="https://wallpapercave.com/wp/wp2392310.jpg" class="pokemon" alt="pokemon_img"/>
-            <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+        <div class="child4">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">Squirtle is a Water type Pokémon introduced in Generation 1. It is known as the Tiny Turtle Pokémon.</p>
+            <div class="child4">
                 <button class="type">
-                    Electric
+                    Water
                 </button>
             </div>
         </div>
     </div>
     <div class="parent">
-        <div class="child">
-            <img src="https://wallpapercave.com/wp/wp2392310.jpg" class="pokemon" alt="pokemon_img"/>
-            <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+        <div class="child5">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/095.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">As it digs through the ground, it absorbs many hard objects. This is what makes its body so solid.</p>
+            <div class="child5">
                 <button class="type">
-                    Electric
+                    Rock
+                </button>
+                <button class="type">
+                    Ground
                 </button>
             </div>
         </div>
     </div>
     <div class="parent">
-        <div class="child">
-            <img src="https://wallpapercave.com/wp/wp2392310.jpg" class="pokemon" alt="pokemon_img"/>
-            <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+        <div class="child6">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/039.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">Jigglypuff has top-notch lung capacity, even by comparison to other Pokémon. It won’t stop singing until all sleep</p>
+            <div class="child6">
                 <button class="type">
-                    Electric
+                    Normal
+                </button>
+                <button class="type">
+                    Fairy
                 </button>
             </div>
         </div>
     </div>
     <div class="parent">
-        <div class="child">
-            <img src="https://wallpapercave.com/wp/wp2392310.jpg" class="pokemon" alt="pokemon_img"/>
-            <p class="desc">Pikachu that can generate powerful electricity have cheek sacs that are extra soft and super stretchy.</p>
-            <div class="child2">
+        <div class="child7">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/012.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">In battle, it flaps its wings at great speed to release highly toxic dust into the air it is ash's second pokemon</p>
+            <div class="child7">
                 <button class="type">
-                    Electric
+                    Bug
+                </button>
+                <button class="type">
+                    Flying
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="parent">
+        <div class="child8">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/017.png" class="pokemon" alt="pokemon_img"/>
+            <p class="desc">This Pokémon is full of vitality. It constantly flies around its large territory in search of prey.</p>
+            <div class="child8">
+                <button class="type">
+                    Normal
+                </button>
+                <button class="type">
+                    Flying
                 </button>
             </div>
         </div>
